# reflexio-zendesk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_AGENT_INTEGRATION.md  Dockerfile  Makefile  README.md  developer.md  docker-compose.yml  how_to_write_readme.md  pyproject.toml  pyrightconfig.json  stop_services.sh
client_dist/: README.md  pyproject.toml
docs/: README.md  playbook_optimizer_assistant_backends.md
notebooks/: README.md  (+8 more)
reflexio/integrations/openclaw/plugin/: .gitignore  README.md  index.ts  openclaw.plugin.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
reflexio/integrations/openclaw/plugin/scripts/: _lib.sh  backend-log-runner.sh  backend-service.sh  cli.sh  dashboard-open.sh  ensure-plugin-root.sh  hook_entry.sh  npm-cli.js  smart-install.sh
reflexio/integrations/openclaw/plugin/skills/clear-all/: SKILL.md
reflexio/integrations/openclaw/plugin/skills/dashboard/: SKILL.md
reflexio/integrations/openclaw/plugin/skills/learn/: SKILL.md
reflexio/integrations/openclaw/plugin/skills/reflexio/: SKILL.md
reflexio/integrations/openclaw/plugin/skills/restart/: SKILL.md
reflexio/integrations/openclaw/plugin/skills/show/: SKILL.md
reflexio/integrations/openclaw/plugin/src/openclaw_smart/: cli.py  context_format.py  context_inject.py  hook.py  ids.py  internal_call.py  oc_cite.py  optimizer_assistant.py  publish.py  query_compose.py  reflexio_adapter.py  runtime.py  stall_banner.py  state.py
reflexio/integrations/openclaw/plugin/src/openclaw_smart/events/: after_tool_call.py  agent_end.py  before_prompt_build.py  before_tool_call.py  session_end.py  session_start.py
reflexio/integrations/openclaw/plugin/tests/: test_cli.py  test_events_after_tool_call.py  test_events_agent_end.py  test_events_before_prompt_build.py  test_events_before_tool_call.py  test_events_session_end.py  test_events_session_start.py  test_hook_dispatch.py  test_ids.py  test_internal_call.py  test_oc_cite.py  test_publish.py  test_query_compose.py  test_reflexio_adapter.py  test_runtime.py  test_state.py
reflexio/integrations/openclaw/plugin/tests-ts/: test_npm_cli.test.ts  test_shim_dispatch.test.ts
reflexio/integrations/openclaw/plugin/tests-ts/__mocks__/: plugin-entry-stub.ts
reflexio/integrations/openclaw/plugin/tests/integration/: test_e2e_session_loop.py  test_publish_to_local_reflexio_integration.py  test_recursion_guard_integration.py  test_search_inject_integration.py
(+821 files in other folders)
