[project]
name = "reflexio-client"
version = "0.2.14"
description = "Lightweight Python client for the Reflexio API"
authors = [{name = "Reflexio Team"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "aiohttp>=3.12.9",
    "python-dateutil>=2.8.0",
    "python-dotenv>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"../reflexio/__init__.py" = "reflexio/__init__.py"
"../reflexio/defaults.py" = "reflexio/defaults.py"
"../reflexio/client" = "reflexio/client"
"../reflexio/models" = "reflexio/models"
"../reflexio/integrations" = "reflexio/integrations"

[tool.hatch.build.targets.wheel.force-include]
"reflexio/__init__.py" = "reflexio/__init__.py"
"reflexio/defaults.py" = "reflexio/defaults.py"
"reflexio/client" = "reflexio/client"
"reflexio/models" = "reflexio/models"
"reflexio/integrations" = "reflexio/integrations"
